--- a/app/src/main/res/layout/content_base.xml
+++ b/app/src/main/res/layout/content_base.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,7 +12,7 @@
         android:id="@+id/base_rl_contentview"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <include layout="@layout/content_main" />
+       <!-- <include layout="@layout/content_main" />-->
     </RelativeLayout>
 
-</android.support.constraint.ConstraintLayout>
+</android.support.v4.widget.NestedScrollView>
