--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="large_textsize">22sp</dimen>
     <dimen name="standars_textsize">18sp</dimen>
+    <dimen name="appbar_padding_top">8dp</dimen>
 </resources>
